fix scrollbar

--- a/src/app.css
+++ b/src/app.css
@@ -11,7 +11,6 @@
 	--bg-color-3-5: hsl(200, 17%, 21.5%);
 	--sub-color: hsl(200, 17%, 26%);
 	--font-color: hsl(200, 37%, 68%);
-	--scrollbar-color: hsla(200, 17%, 12%, 0.5);
 }
 
 * {
@@ -41,7 +40,7 @@ body {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-	background: var(--bg-color-2);
+	background: var(--bg-color-1-5);
 }
 
 :focus {
@@ -54,7 +53,6 @@ button {
 	font: inherit;
 	border: none;
 }
-
 
 input::placeholder {
 	color: var(--sub-color);
